refactor GuideDocumentCache and GuideScreen to enhance navigation tree handling and improve label entry management